@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2023 DBeaver Corp and others
+ * Copyright (C) 2010-2024 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,6 +19,7 @@ package org.jkiss.dbeaver.ext.mysql.model;
 import org.jkiss.code.NotNull;
 import org.jkiss.code.Nullable;
 import org.jkiss.dbeaver.ext.mysql.MySQLConstants;
+import org.jkiss.dbeaver.model.DBPDataSource;
 import org.jkiss.dbeaver.model.exec.jdbc.JDBCDatabaseMetaData;
 import org.jkiss.dbeaver.model.exec.jdbc.JDBCSession;
 import org.jkiss.dbeaver.model.impl.jdbc.JDBCDataSource;
@@ -26,26 +27,29 @@ import org.jkiss.dbeaver.model.impl.jdbc.JDBCSQLDialect;
 import org.jkiss.dbeaver.model.impl.sql.BasicSQLDialect;
 import org.jkiss.dbeaver.model.sql.SQLConstants;
 import org.jkiss.dbeaver.model.sql.SQLDialect;
+import org.jkiss.dbeaver.model.sql.SQLDialectSchemaController;
 import org.jkiss.dbeaver.model.struct.DBSTypedObject;
 import org.jkiss.dbeaver.model.struct.rdb.DBSProcedure;
 import org.jkiss.dbeaver.model.struct.rdb.DBSProcedureType;
 import org.jkiss.utils.ArrayUtils;
 
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.EnumSet;
+import java.util.List;
+import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 /**
-* MySQL dialect
-*/
-public class MySQLDialect extends JDBCSQLDialect {
+ * MySQL dialect
+ */
+public class MySQLDialect extends JDBCSQLDialect implements SQLDialectSchemaController {
 
     public static final String[] MYSQL_NON_TRANSACTIONAL_KEYWORDS = ArrayUtils.concatArrays(
         BasicSQLDialect.NON_TRANSACTIONAL_KEYWORDS,
         new String[]{
             "USE", "SHOW",
             "CREATE", "ALTER", "DROP",
-            SQLConstants.KEYWORD_EXPLAIN, "DESCRIBE", "DESC" }
+            SQLConstants.KEYWORD_EXPLAIN, "DESCRIBE", "DESC"}
     );
 
     private static final String[] ADVANCED_KEYWORDS = {
@@ -126,35 +130,79 @@ public class MySQLDialect extends JDBCSQLDialect {
         "ST_POLYFROMTEXT"
     };
 
-    private static String[] EXEC_KEYWORDS =  { "CALL" };
+    private static final String[] JSON_FUNCTIONS = {
+        "JSON_ARRAY",
+        "JSON_ARRAYAGG",
+        "JSON_ARRAY_APPEND",
+        "JSON_ARRAY_INSERT",
+        "JSON_CONTAINS",
+        "JSON_CONTAINS_PATH",
+        "JSON_DEPTH",
+        "JSON_EXTRACT",
+        "JSON_INSERT",
+        "JSON_KEYS",
+        "JSON_LENGTH",
+        "JSON_MERGE",
+        "JSON_MERGE_PATCH",
+        "JSON_MERGE_PRESERVE",
+        "JSON_OBJECT",
+        "JSON_OBJECTAGG",
+        "JSON_QUOTE",
+        "JSON_REMOVE",
+        "JSON_REPLACE",
+        "JSON_SEARCH",
+        "JSON_SET",
+        "JSON_TABLE",
+        "JSON_TYPE",
+        "JSON_UNQUOTE",
+        "JSON_VALID",
+        "JSON_VALUE"
+    };
+    
+    private static final Pattern ONE_OR_MORE_DIGITS_PATTERN = Pattern.compile("[0-9]+");
+
+    private static final String[] EXEC_KEYWORDS =  { "CALL" };
     private int lowerCaseTableNames;
 
     public MySQLDialect() {
         super("MySQL", "mysql");
     }
+    
+    public MySQLDialect(String name, String id) {
+        super(name, id);
+    }
 
-    public void initDriverSettings(JDBCSession session, JDBCDataSource dataSource, JDBCDatabaseMetaData metaData) {
+    public void initBaseDriverSettings(JDBCSession session, JDBCDataSource dataSource, JDBCDatabaseMetaData metaData) {
         super.initDriverSettings(session, dataSource, metaData);
-        this.lowerCaseTableNames = ((MySQLDataSource)dataSource).getLowerCaseTableNames();
-        this.setSupportsUnquotedMixedCase(lowerCaseTableNames != 2);
 
-        //addSQLKeyword("STATISTICS");
-        Collections.addAll(tableQueryWords, SQLConstants.KEYWORD_EXPLAIN, "DESCRIBE", "DESC");
-        addFunctions(Arrays.asList("SLEEP"));
+        addTableQueryKeywords(SQLConstants.KEYWORD_EXPLAIN, "DESCRIBE", "DESC");
+        addFunctions(List.of("SLEEP"));
 
-        for (String kw : ADVANCED_KEYWORDS) {
-            addSQLKeyword(kw);
-        }
+        addSQLKeywords(Arrays.asList(ADVANCED_KEYWORDS));
         removeSQLKeyword("SOURCE");
 
         // CHAR is data type, not function
         removeSQLKeyword("CHAR");
 
-        addDataTypes(Arrays.asList("GEOMETRY", "POINT", "CHAR"));
+        addDataTypes(List.of("CHAR"));
         addFunctions(Arrays.asList(MYSQL_EXTRA_FUNCTIONS));
+        addFunctions(Arrays.asList(JSON_FUNCTIONS));
+    }
+    
+    @Override
+    public void initDriverSettings(JDBCSession session, JDBCDataSource dataSource, JDBCDatabaseMetaData metaData) {
+        initBaseDriverSettings(session, dataSource, metaData);
+
+        addDataTypes(Arrays.asList("GEOMETRY", "POINT"));
         addFunctions(Arrays.asList(MYSQL_GEOMETRY_FUNCTIONS));
     }
 
+    @Override
+    public void afterDataSourceInitialization(@NotNull DBPDataSource dataSource) {
+        this.lowerCaseTableNames = ((MySQLDataSource) dataSource).getLowerCaseTableNames();
+        this.setSupportsUnquotedMixedCase(lowerCaseTableNames != 2);
+    }
+    
     @Nullable
     @Override
     public String[][] getIdentifierQuoteStrings() {
@@ -196,7 +244,8 @@ public class MySQLDialect extends JDBCSQLDialect {
 
     @Override
     public boolean mustBeQuoted(String str, boolean forceCaseSensitive) {
-        if (Pattern.matches("[0-9]+", str)) { // we should quote numeric names
+        Matcher matcher = ONE_OR_MORE_DIGITS_PATTERN.matcher(str);
+        if (matcher.lookingAt()) { // we should quote numeric names and names starts with number
             return true;
         }
         return super.mustBeQuoted(str, forceCaseSensitive);
@@ -255,7 +304,7 @@ public class MySQLDialect extends JDBCSQLDialect {
 
     @Override
     public String[] getSingleLineComments() {
-        return new String[] { "-- ", "#" };
+        return new String[] { "-- ", "--\t", "#" };
     }
 
     @Override
@@ -292,7 +341,7 @@ public class MySQLDialect extends JDBCSQLDialect {
     public boolean validIdentifierStart(char c) {
         return Character.isLetterOrDigit(c);
     }
-    
+
     @NotNull
     @Override
     public String getTypeCastClause(@NotNull DBSTypedObject attribute, @NotNull String expression, boolean isInCondition) {
@@ -301,5 +350,26 @@ public class MySQLDialect extends JDBCSQLDialect {
         } else {
             return super.getTypeCastClause(attribute, expression, isInCondition);
         }
+    }
+
+    @NotNull
+    @Override
+    public String getSchemaExistQuery(@NotNull String schemaName) {
+        return "SHOW DATABASES LIKE " + getQuotedString(schemaName);
+    }
+
+    @NotNull
+    @Override
+    public String getCreateSchemaQuery(@NotNull String schemaName) {
+        return "CREATE DATABASE " + schemaName;
+    }
+
+    @Override
+    public EnumSet<ProjectionAliasVisibilityScope> getProjectionAliasVisibilityScope() {
+        return EnumSet.of(
+            ProjectionAliasVisibilityScope.GROUP_BY,
+            ProjectionAliasVisibilityScope.HAVING,
+            ProjectionAliasVisibilityScope.ORDER_BY
+        );
     }
 }
